--- a/index.html
+++ b/index.html
@@ -74,67 +74,142 @@
     }
 
     /* Modern cartoony button */
-    .cart-btn{
-      width: 100%;
-      padding: 14px 16px;
-      border-radius: 18px;
-      font-weight: 900;
-      letter-spacing: .2px;
-      color: #201600;
-      text-shadow: 0 1px 0 rgba(255,255,255,.30);
-      border: 1.5px solid rgba(255,255,255,.22);
-      box-shadow: var(--shadow2), var(--shadow1);
-      position: relative;
-      overflow: hidden;
-      transform: translateY(0) scale(1);
-      transition: transform .12s ease, filter .12s ease, box-shadow .12s ease;
-      backdrop-filter: blur(6px);
-    }
-    .cart-btn::after{
-      content:"";
-      position:absolute;
-      inset:-40% -60%;
-      background: radial-gradient(circle at 30% 20%, rgba(255,255,255,.38), rgba(255,255,255,0) 55%);
-      transform: rotate(-10deg);
-      pointer-events:none;
-      opacity: .9;
-    }
-    .cart-btn::before{
-      content:"";
-      position:absolute;
-      inset: 2.5px 2.5px auto 2.5px;
-      height: 44%;
-      border-radius: 15px;
-      background: linear-gradient(180deg, rgba(255,255,255,.52), rgba(255,255,255,0));
-      pointer-events:none;
-      opacity: .85;
-    }
-    .cart-btn:active{
-      transform: translateY(5px) scale(.99);
-      filter: brightness(.99) saturate(1.02);
-      box-shadow: 0 3px 0 rgba(0,0,0,.14), 0 8px 18px rgba(0,0,0,.22);
-    }
-    @media (hover:hover){
-      .cart-btn:hover{
-        transform: translateY(-1px);
-        filter: brightness(1.02);
-      }
-    }
+    /* =========================
+   STRONGER GAME BUTTONS
+   ========================= */
+/* =========================
+   MODERN CARTOONY GAME BUTTON
+   (richer + not pale + with glow)
+   ========================= */
+.cart-btn{
+  width: 100%;
+  padding: 16px 18px;
+  border-radius: 20px;
+  font-weight: 900;
+  letter-spacing: .3px;
 
-    .cart-btn .row{
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      gap: 10px;
-      position: relative;
-      z-index: 1;
-    }
-    .btn-label{ font-size: 18px; line-height: 1; }
+  color: #fff;
+  text-shadow: 0 2px 0 rgba(0,0,0,.35);
 
-    .btn-green{ background: linear-gradient(180deg, var(--btn-green-1), var(--btn-green-2) 55%, var(--btn-green-3)); }
-    .btn-orange{ background: linear-gradient(180deg, var(--btn-orange-1), var(--btn-orange-2) 55%, var(--btn-orange-3)); }
-    .btn-red{ background: linear-gradient(180deg, var(--btn-red-1), var(--btn-red-2) 55%, var(--btn-red-3)); }
-    .btn-blue{ background: linear-gradient(180deg, var(--btn-blue-1), var(--btn-blue-2) 55%, var(--btn-blue-3)); }
+  border: 2px solid rgba(0,0,0,.18);
+  box-shadow:
+    0 7px 0 rgba(0,0,0,.30),
+    0 18px 30px rgba(0,0,0,.35);
+
+  position: relative;
+  overflow: hidden;
+  transform: translateY(0) scale(1);
+  transition: transform .12s ease, filter .12s ease, box-shadow .12s ease;
+}
+
+/* Keep a subtle modern shine (NOT pale) */
+.cart-btn::before{
+  content:"";
+  position:absolute;
+  left: 10px;
+  right: 10px;
+  top: 7px;
+  height: 45%;
+  border-radius: 16px;
+  background: linear-gradient(180deg, rgba(255,255,255,.22), rgba(255,255,255,0));
+  pointer-events:none;
+  opacity: .85;
+}
+
+/* Tiny candy-like specular streak */
+.cart-btn::after{
+  content:"";
+  position:absolute;
+  width: 140%;
+  height: 140%;
+  left: -60%;
+  top: -70%;
+  background: radial-gradient(circle at 70% 65%, rgba(255,255,255,.18), rgba(255,255,255,0) 55%);
+  transform: rotate(-12deg);
+  pointer-events:none;
+  opacity: .9;
+}
+
+.cart-btn:active{
+  transform: translateY(6px) scale(.99);
+  filter: brightness(.98) saturate(1.08);
+  box-shadow:
+    0 3px 0 rgba(0,0,0,.30),
+    0 10px 18px rgba(0,0,0,.28);
+}
+
+@media (hover:hover){
+  .cart-btn:hover{
+    transform: translateY(-1px);
+    filter: brightness(1.03) saturate(1.08);
+  }
+}
+
+.cart-btn .row{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap: 10px;
+  position: relative;
+  z-index: 1;
+}
+
+.btn-label{
+  font-size: 18px;
+  line-height: 1;
+}
+
+/* =========================
+   RICHER COLORS (less pale)
+   ========================= */
+.btn-green{
+  background: linear-gradient(180deg, #34d399 0%, #22c55e 45%, #15803d 100%);
+}
+.btn-orange{
+  background: linear-gradient(180deg, #fb923c 0%, #f97316 45%, #c2410c 100%);
+}
+.btn-red{
+  background: linear-gradient(180deg, #f87171 0%, #ef4444 45%, #991b1b 100%);
+}
+.btn-blue{
+  background: linear-gradient(180deg, #38bdf8 0%, #0ea5e9 45%, #0369a1 100%);
+}
+
+/* =========================
+   GLOW EFFECT (modern game vibe)
+   ========================= */
+.cart-btn{
+  --glow: rgba(255,255,255,0); /* default off, set per button */
+  box-shadow:
+    0 7px 0 rgba(0,0,0,.30),
+    0 18px 30px rgba(0,0,0,.35),
+    0 0 0 rgba(0,0,0,0),
+    0 0 0 rgba(0,0,0,0);
+}
+
+.btn-green{ --glow: rgba(34,197,94,.55); }
+.btn-orange{ --glow: rgba(249,115,22,.55); }
+.btn-red{ --glow: rgba(239,68,68,.50); }
+.btn-blue{ --glow: rgba(14,165,233,.55); }
+
+@media (hover:hover){
+  .cart-btn:hover{
+    box-shadow:
+      0 7px 0 rgba(0,0,0,.30),
+      0 18px 30px rgba(0,0,0,.35),
+      0 0 22px var(--glow),
+      0 0 44px rgba(255,255,255,.06);
+  }
+}
+
+/* Optional: ALWAYS glowing (if you want it even on mobile) */
+.cart-btn.glow{
+  box-shadow:
+    0 7px 0 rgba(0,0,0,.30),
+    0 18px 30px rgba(0,0,0,.35),
+    0 0 22px var(--glow),
+    0 0 44px rgba(255,255,255,.06);
+}
 
     /* Badge container used inside main buttons */
     .badge{
