--- a/index.html
+++ b/index.html
@@ -19,6 +19,43 @@
     }
     .game-font { font-family: 'Fredoka', sans-serif; }
 
+    /* Bigger Main Button */
+.main-btn{
+  padding: 20px 22px;
+  font-size: 20px;
+  transform: scale(1.05);
+}
+    /* PLAY special gradient matching logo */
+.btn-play{
+  background: linear-gradient(
+    180deg,
+    #4ade80 0%,
+    #22c55e 40%,
+    #eab308 100%
+  );
+  --glow: rgba(234,179,8,.75);
+}
+
+/* Animated glow */
+.btn-play.glow{
+  animation: ecoPulse 2.2s ease-in-out infinite;
+}
+
+@keyframes ecoPulse{
+  0%,100%{
+    box-shadow:
+      0 8px 0 rgba(0,0,0,.30),
+      0 20px 30px rgba(0,0,0,.35),
+      0 0 20px rgba(234,179,8,.5);
+  }
+  50%{
+    box-shadow:
+      0 8px 0 rgba(0,0,0,.30),
+      0 20px 30px rgba(0,0,0,.35),
+      0 0 40px rgba(234,179,8,.9);
+  }
+}
+
     /* BACKGROUND IMAGES (LOCAL REPO PATHS) */
     .bg-home    { background: url("background-ui/home.png") center/cover no-repeat; }
     .bg-map     { background: url("background-ui/map.png") center/cover no-repeat; }
@@ -166,7 +203,15 @@
   background: linear-gradient(180deg, #34d399 0%, #22c55e 45%, #15803d 100%);
 }
 .btn-orange{
-  background: linear-gradient(180deg, #fb923c 0%, #f97316 45%, #c2410c 100%);
+  background: linear-gradient(
+    180deg,
+    #facc15 0%,
+    #f59e0b 45%,
+    #d97706 100%
+  );
+  .btn-orange{
+  transform: scale(.95);
+}
 }
 .btn-red{
   background: linear-gradient(180deg, #f87171 0%, #ef4444 45%, #991b1b 100%);
@@ -458,7 +503,7 @@
       </div>
 
       <div class="space-y-4 w-full max-w-xs mb-10">
-        <button onclick="showScreen('map-screen')" class="cart-btn btn-green" aria-label="Play" data-icon="play">
+        <button onclick="showScreen('map-screen')" class="cart-btn btn-play glow main-btn"> aria-label="Play" data-icon="play">
           <div class="row">
             <div class="badge">
               <svg class="svg svg-fill" viewBox="0 0 24 24"><path d="M8 5l12 7-12 7z"/></svg>
