--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
       border-radius: 22px;
     }
 
+    /* ✅ Smaller secondary CTA (Shop) */
+    .shop-btn-small{
+      padding: 12px 16px;
+      border-radius: 18px;
+      font-size: 16px;
+      width: 86%;
+      margin: 0 auto; /* centers it */
+      opacity: .96;
+    }
+
     /* PLAY stays GREEN + glow animation */
     .btn-play{
       background: linear-gradient(180deg, #4ade80 0%, #22c55e 55%, #16a34a 100%);
@@ -466,8 +476,9 @@
         <img src="background-ui/title.png" alt="EcoRush" class="home-title-img" />
       </div>
 
-      <div class="space-y-4 w-full max-w-xs mb-10">
-        <!-- ✅ FIXED: correct button tag + attributes + BIG + GREEN + GLOW -->
+      <!-- ✅ PLAY dominant + SHOP smaller -->
+      <div class="space-y-3 w-full max-w-xs mb-10">
+        <!-- PLAY (dominant) -->
         <button onclick="showScreen('map-screen')" class="cart-btn btn-play glow main-btn" aria-label="Play" data-icon="play">
           <div class="row">
             <div class="badge">
@@ -477,18 +488,18 @@
           </div>
         </button>
 
-        <!-- ✅ SHOP is now yellow-orange -->
-        <button onclick="showScreen('shop-screen')" class="cart-btn btn-shop" aria-label="Shop" data-icon="shop">
+        <!-- SHOP (smaller secondary) -->
+        <button onclick="showScreen('shop-screen')" class="cart-btn btn-shop shop-btn-small" aria-label="Shop" data-icon="shop">
           <div class="row">
-            <div class="badge">
-              <svg class="svg" viewBox="0 0 24 24">
+            <div class="badge" style="width:36px;height:36px;border-radius:14px;">
+              <svg class="svg" viewBox="0 0 24 24" style="width:20px;height:20px;">
                 <path d="M6 7h15l-1.5 9H7.2L6 7z"/>
                 <path d="M6 7l-2-3H2"/>
                 <path d="M9 21a1 1 0 100-2 1 1 0 000 2z"/>
                 <path d="M18 21a1 1 0 100-2 1 1 0 000 2z"/>
               </svg>
             </div>
-            <span class="btn-label">Shop</span>
+            <span class="btn-label" style="font-size:16px;">Shop</span>
           </div>
         </button>
       </div>
