--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       border-radius: 22px;
     }
 
-    /* ✅ Smaller secondary CTA (Shop) */
+    /* ✅ Smaller secondary CTA (Shop) — smaller than before */
     .shop-btn-small{
-      padding: 12px 16px;
-      border-radius: 18px;
-      font-size: 16px;
-      width: 86%;
-      margin: 0 auto; /* centers it */
+      padding: 10px 14px;        /* smaller */
+      border-radius: 16px;       /* smaller */
+      font-size: 15px;           /* smaller */
+      width: 78%;                /* smaller width vs play */
+      margin: 0 auto;            /* centers it */
       opacity: .96;
     }
 
@@ -491,15 +491,15 @@
         <!-- SHOP (smaller secondary) -->
         <button onclick="showScreen('shop-screen')" class="cart-btn btn-shop shop-btn-small" aria-label="Shop" data-icon="shop">
           <div class="row">
-            <div class="badge" style="width:36px;height:36px;border-radius:14px;">
-              <svg class="svg" viewBox="0 0 24 24" style="width:20px;height:20px;">
+            <div class="badge" style="width:32px;height:32px;border-radius:12px;">
+              <svg class="svg" viewBox="0 0 24 24" style="width:18px;height:18px;">
                 <path d="M6 7h15l-1.5 9H7.2L6 7z"/>
                 <path d="M6 7l-2-3H2"/>
                 <path d="M9 21a1 1 0 100-2 1 1 0 000 2z"/>
                 <path d="M18 21a1 1 0 100-2 1 1 0 000 2z"/>
               </svg>
             </div>
-            <span class="btn-label" style="font-size:16px;">Shop</span>
+            <span class="btn-label" style="font-size:15px;">Shop</span>
           </div>
         </button>
       </div>
