--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
               <path d="M20 4s-6 0-10 4-4 10-4 10 6 0 10-4 4-10 4-10z"/>
               <path d="M10 14c3-1 6-4 7-7"/>
             </svg>
-            <span class="text-xs text-white font-black text-center leading-tight mt-1"></span>
+            <span class="text-xs text-white font-black text-center leading-tight mt-1">Bio</span>
           </div>
 
           <div class="bin flex flex-col items-center p-2 rounded-2xl shadow-lg bg-blue-600/85 border border-white/10" data-bin="recyclable">
