--- a/index.html
+++ b/index.html
@@ -2058,7 +2058,7 @@
 
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/sw.js').catch((error) => {
+        navigator.serviceWorker.register('./sw.js').catch((error) => {
           console.warn('Service worker registration failed:', error);
         });
       });
